# kg-gen

./: .dockerignore  .env.example  .gcloudignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  dedup_demo.py  deploy_cloud_run.sh  pyproject.toml  requirements.txt  run_dedup_docker.sh  run_server.sh  tmp_graph.json
.github/workflows/: deploy-app.yaml  deploy-cloud-run.yml  openhands-resolver.yaml  publish-pypi.yml  test-deploy.yaml
MINE/: README.md  essays.json  evaluation.py  example.json
app/: .dockerignore  Dockerfile  README.md  cloudbuild.yaml  deploy-test.sh  deploy.sh  deploy_cloud_run.sh  index.html  modal.css  modal.js  popover-selected.js  script.js  server.py  sidebar.css  sidebar.js  styles.css
app/examples/: 1998_FIFA_World_Cup.json  ASPNET.json  Adenosine_deaminase_deficiency.json  Apple_Inc.json
examples/: basic.py  dedup_graph.py
examples/enriched_tasks/: enriched_tasks.csv
examples/obsidian_notes/: index.py
examples/obsidian_notes/notes/: note_01.md  note_02.md  note_03.md  note_04.md  note_05.md  note_06.md  note_07.md  note_08.md  note_09.md  note_10.md  note_11.md  note_12.md  note_13.md  note_14.md  note_15.md  note_16.md  note_17.md  note_18.md  note_19.md  note_20.md
examples/organize_professional_network/: index.py
examples/organize_professional_network/output/: network_graph.json
examples/organize_professional_network/output/Alexander_Nguyen/: graph.json
examples/organize_professional_network/output/Rachel_Miller/: graph.json
examples/organize_professional_network/people/: Adrian_Wong.md  Aisha_Williams.md  Alex_Thompson.md  Alexander_Nguyen.md  Alicia_Thompson.md  Amanda_Parker.md  Andrew_Lee.md  Andrew_Wilson.md  Anthony_Rodriguez.md  Benjamin_Clark.md  Brandon_Taylor.md  Brian_Anderson.md  Carlos_Rodriguez.md  Christina_Lopez.md  Christopher_Lee.md  Daniel_Brown.md  Daniel_Nguyen.md  David_Kim.md  David_Wilson.md  Derek_Wilson.md  Elizabeth_Morgan.md  Emily_Chang.md  Emma_Rodriguez.md  Eric_Johnson.md  Erica_Johnson.md  Gabriella_Martinez.md  Gregory_Thompson.md  Isabella_Martinez.md  James_Wilson.md  Jason_Campbell.md  Jason_Miller.md  Jason_Williams.md  Jennifer_Garcia.md  Jennifer_Lee.md  Jessica_Brown.md  Jessica_Zhang.md  Jonathan_Friedman.md  Jonathan_Taylor.md  Jordan_Miller.md  Joshua_Martin.md  (+52 more)
experiments/MINE/: README.md  answers.json  compare_results.py  evaluation.py  upload_dataset.py
experiments/MINE/faiss-scikit/: README.md  resume.txt
experiments/MINE/faiss-scikit/faiss/: results_0.json  results_1.json  results_10.json  results_11.json  results_12.json  results_13.json  results_14.json  results_15.json  results_16.json  results_17.json  results_18.json  results_19.json  results_2.json  results_20.json  results_21.json  results_22.json  results_23.json  results_24.json  results_25.json  results_26.json  results_27.json  results_28.json  results_29.json  results_3.json  results_30.json  results_31.json  results_32.json  (+73 more)
experiments/wikiqa/: _1_download_articles.py  _2_generate_kgs.py  _3_upload_hf.py  _4_upload_neo4j.py  neo4j_uploader.py
experiments/wikiqa/utils/: cluster_and_deduplication.py
mcp/: README.md  server.py
mcp/tests/: README.md  __init__.py  conftest.py  run_all_tests.py  test_mcp.py  test_mcp_simple.py  test_memory_file_creation.py  test_storage_path_resolution.py  test_unit.py
scripts/wikiqa_experiments/: _3_upload_hf.py
src/kg_gen/: __init__.py  cli.py  kg_gen.py  models.py
src/kg_gen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/kg_gen/steps/: _1_get_entities.py  _2_get_relations.py  _3_cluster_graph.py  _3_dedup_cluster_graph.py  _3_deduplicate.py
src/kg_gen/utils/: __init__.py  chunk_text.py  deduplicate.py  llm_deduplicate.py  neo4j_integration.py  template.html  visualize_kg.py
tests/: .env.example  fixtures.py  test_basic.html  test_basic.py  test_basic_2.py  test_chunk_and_cluster.py  test_chunk_text.py  test_chunked.py  test_clustering.py  test_configs.py  test_context.py  test_custom_api_base.py  test_typed_entities_edges.py
tests/data/: ablation_0.py
tests/data/wiki_qa/: test.csv  test_clean.csv  test_clean_2.csv  train.csv  train_clean.csv  train_clean_2.csv  validation.csv  validation_clean.csv  validation_clean_2.csv
tests/utils/: alphabetize.py  resolution.py  visualize_kg.py  wiki_qa.py  wiki_qa_batch.py
(+5158 files in other folders)
